<resources>
    <string name="app_name">Pokemon Universe</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="types">Types</string>
    <string name="stats">Stats</string>
    <string name="name">Name</string>
    <string name="defense">defense</string>
    <string name="hp">hp</string>
    <string name="sort">Sort</string>
    <string name="attack">attack</string>
    <string name="loading_new_data">Loading new data...</string>
    <string name="sorting_data">Sorting data...</string>
</resources>